added facebook and twitter buttons

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Poppins:500,700" rel="stylesheet">
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@unfoldco" />
+  <meta name="twitter:title" content="Grab yourself a gradient" />
+  <meta name="twitter:description" content="Beautiful and simple UI for generating web gradients." />
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
