added facebook meta tags and changed iframe website like link

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
   <meta name="twitter:site" content="@unfoldco" />
   <meta name="twitter:title" content="Grab yourself a gradient" />
   <meta name="twitter:description" content="Beautiful and simple UI for generating web gradients." />
+  <meta property="og:url" content="https://www.grabient.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Grab yourself a gradient" />
+  <meta property="og:description" content="Beautiful and simple UI for generating web gradients." />
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
