--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Grab yourself a gradient" />
   <meta property="og:description" content="Beautiful and simple UI for generating web gradients." />
+  <meta name="google-site-verification" content="lNZUPdUaGS1yWN35w6mffOp-GBWHYswpgYfDLdRPrjw" />
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
