--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,11 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
   <link href="https://fonts.googleapis.com/css?family=Poppins:500,700" rel="stylesheet">
-  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@unfoldco" />
   <meta name="twitter:title" content="Grab yourself a gradient" />
   <meta name="twitter:description" content="Beautiful and simple UI for generating web gradients." />
+  <meta name="twitter:image" content="http://imgur.com/ph4LxtL">
   <meta property="og:url" content="https://www.grabient.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Grab yourself a gradient" />
