updated meta tags for twitter

--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,11 @@
   <meta name="theme-color" content="#ffffff">
   <link href="https://fonts.googleapis.com/css?family=Poppins:500,700" rel="stylesheet">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@unfoldco" />
-  <meta name="twitter:title" content="Grab yourself a gradient" />
-  <meta name="twitter:description" content="Beautiful and simple UI for generating web gradients." />
-  <meta name="twitter:image" content="http://imgur.com/ph4LxtL">
+  <meta name="twitter:site" content="unfoldco">
+  <meta name="twitter:title" content="Grabient">
+  <meta name="twitter:description" content="Beautiful and simple UI for generating web gradients.">
+  <meta name="twitter:image" content="%PUBLIC_URL%/grabber.png">
+  <meta name="twitter:image:alt" content="Grabient image">
   <meta property="og:url" content="https://www.grabient.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Grab yourself a gradient" />
