messed with meta tags AGAIN

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <meta name="twitter:site" content="unfoldco">
   <meta name="twitter:title" content="Grabient">
   <meta name="twitter:description" content="Beautiful and simple UI for generating web gradients.">
-  <meta name="twitter:image" content="https://www.grabient.com/grabber.ong">
+  <meta name="twitter:image" content="https://www.grabient.com/grabber.png">
   <meta name="twitter:image:alt" content="Grabient image">
   <meta property="og:url" content="https://www.grabient.com/" />
   <meta property="og:type" content="website" />
