--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,9 @@
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="theme-color" content="#ffffff">
   <link href="https://fonts.googleapis.com/css?family=Poppins:500,700" rel="stylesheet">
+  <meta name="description" content="Beautiful and simple UI for generating web gradients." />
+  <meta name="theme-color" content="#ffffff">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="unfoldco">
   <meta name="twitter:title" content="Grabient">
